# amber

./: pyproject.toml  run_amber.py
geos/: .gitignore  package-lock.json  pyproject.toml
geos/.copilot/: checkpoint.md  config.yml  direction.md  hub.md  method_tree.jsonl  method_tree.md  research_log.md  sleep_report.md  sleep_report_template.md  status.md  wakeup_briefing.md
geos/docs/: 2026-04-27_4condition-file-tool-comparison.md  2026-04-27_dsv4_migration.md  2026-04-27_file-access-and-tool-usage-analysis.md  2026-04-27_openhands_system_prompt_template.j2.txt  2026-04-27_orchestrator-handoff.md  2026-04-27_other-coding-agent-harness-selection.md  2026-04-27_session_summary.md  2026-04-27_subagent-architecture-geos.md  2026-04-27_vanilla-cc-stale-plugin-call-bug.md  2026-04-27_xmllint-validation-summary.md  2026-04-28_plugin-reconciliation-and-bottlenecks.md  2026-04-29_ablation-analyzer-design.md  2026-04-30_HANDOFF_TASK1_memp.md  2026-04-30_HANDOFF_TASK2_orchestrator.md  2026-04-30_HANDOFF_TASK3_self_evolving.md  2026-04-30_OVERNIGHT_SUMMARY.md  2026-04-30_TASK1_memp.md  2026-04-30_TASK2_orchestrator.md  2026-04-30_TASK3_self_evolving.md  2026-04-30_TASK3_self_evolving_DESIGN.md  2026-04-30_dsv4-ablation-SESSION-SUMMARY.md  2026-04-30_dsv4-ablation-final-v2.md  2026-04-30_dsv4-ablation-final.md  2026-04-30_dsv4-ablation-runbook.md  2026-04-30_subagent-orchestrator-handoff.md  2026-05-01_C0_C1_per_task_files.md  2026-05-01_C0_abs_min_primer_behavior.md  2026-05-01_autonomous-campaign-plan.md  2026-05-01_gemma-timeout-diagnosis.md  2026-05-01_paper-framing.md  (+100 more)
(+483 files in other folders)
