[project]
name = "repo3"
version = "0.1.0"
description = "GEOS agent evaluation harness (repo3)"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.0.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
